Closed Bug 542900 Opened 15 years ago Closed 15 years ago

nsPluginInstanceOwner::Init wrongly calls RemoveScrollPositionListener

Categories

(Core :: Web Painting, defect, P2)

defect

Tracking

()

RESOLVED FIXED
mozilla1.9.3a1
Tracking Status
blocking2.0 --- final+

People

(Reporter: tnikkel, Assigned: tnikkel)

References

Details

Attachments

(1 file)

nsPluginInstanceOwner::Init calls RemoveScrollPositionListener but it should be calling AddScrollPositionListener. A copy-paste bug from bug 526394.
Attached patch patchSplinter Review
Assignee: nobody → tnikkel
Attachment #424141 - Flags: review?(roc)
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.3a1
blocking2.0: ? → final+
Priority: -- → P2
Component: Layout: View Rendering → Layout: Web Painting
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: