Bug 542900. nsPluginInstanceOwner::Init should be calling AddScrollPositionListener. r=roc